// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconLink />  should match baseline snapshot of anchor 1`] = `
<a
  class="kjCPoV iLbNOi"
  href="http://google.com"
  title="Does an action"
>
  <span
    class="hNDMaS"
    color="currentColor"
    display="block"
  >
    <svg
      class="hfAVjD"
      height="100%"
      preserveaspectratio="xMidYMid meet"
      title="ADD"
      viewbox="0 0 24 24"
      width="100%"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
      />
    </svg>
  </span>
</a>
`;

exports[`<IconLink />  should match baseline snapshot of react-router Link 1`] = `
<a
  class="kjCPoV iLbNOi"
  title="Does an action"
>
  <span
    class="hNDMaS"
    color="currentColor"
    display="block"
  >
    <svg
      class="hfAVjD"
      height="100%"
      preserveaspectratio="xMidYMid meet"
      title="ADD"
      viewbox="0 0 24 24"
      width="100%"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
      />
    </svg>
  </span>
</a>
`;
